--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "serverless-app-on-closed-network",
+  "name": "@aws-samples/serverless-app-on-closed-network",
   "version": "0.1.0",
   "bin": {
     "serverless-app-on-closed-network": "bin/serverless-app-on-closed-network.js"
@@ -22,7 +22,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-cloudformation": "^3.350.0",
-    "aws-cdk-lib": "2.80.0",
+    "aws-cdk-lib": "^2.88.0",
     "aws-sdk": "^2.1354.0",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
