--- a/.github/workflows/synth.yml
+++ b/.github/workflows/synth.yml
@@ -13,4 +13,4 @@ jobs:
           node-version: "18.x"
       - run: |
           npm ci
-          npx cdk synth --all
+          npx cdk synth ServerlessAppOnClosedNetworkStack
